--- a/zed/settings.json
+++ b/zed/settings.json
@@ -58,6 +58,9 @@
     },
   },
   "bottom_dock_layout": "left_aligned",
+  "gutter": {
+    "folds": false,
+  },
   "scrollbar": {
     "show": "auto",
     "axes": {
@@ -74,7 +77,7 @@
   "max_tabs": 8,
   "tab_bar": {
     "show": true,
-    "show_tab_bar_buttons": true,
+    "show_tab_bar_buttons": false,
     "show_nav_history_buttons": false,
   },
   "toolbar": {
@@ -112,17 +115,26 @@
     "button": true,
   },
   "minimap": { "show": "never" },
+  "which_key": {
+    "enabled": true,
+    "delay_ms": 300,
+  },
   "indent_guides": {
     "enabled": true,
     "line_width": 2,
     "active_line_width": 4,
-    "coloring": "fixed",
+    "coloring": "indent_aware",
     "background_coloring": "disabled",
   },
   "colorize_brackets": true,
   "experimental.theme_overrides": {
     // "editor.indent_guide_active": "#FF0000" // When using fixed
     // "editor.indent_guide": "#00FF00" // When using fixed
+  },
+  "theme_overrides": {
+    "Catppuccin Mocha": {
+      // "editor.indent_guide_active": "#FF0000",
+    },
   },
 
   // Ensure some extensions are always installed as the config reliest on them
@@ -162,9 +174,14 @@
   "format_on_save": "on",
   "auto_indent_on_paste": true,
   "extend_comment_on_newline": false,
+  "show_signature_help_after_edits": false,
+  "auto_signature_help": false,
   "inlay_hints": {
     "enabled": true,
   },
+
+  // Collaborative Stuff
+  "redact_private_values": false,
 
   // AI
   "show_edit_predictions": true,
@@ -178,7 +195,7 @@
   "agent": {
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-sonnet-4",
+      "model": "claude-sonnet-4-5",
     },
     "button": true,
     "always_allow_tool_actions": true,
@@ -187,12 +204,6 @@
   },
 
   "context_servers": {
-    "postgres-context-server": {
-      "enabled": true,
-      "settings": {
-        // "database_url": "postgresql://jongretar:jongretar@localhost:5432/database"
-      },
-    },
     "chrome-devtools": {
       "enabled": true,
       "command": "npx",
@@ -248,7 +259,7 @@
       "preferred_line_length": 120,
     },
     "Elixir": {
-      "language_servers": ["expert", "!elixir-ls", "!next-ls", "!lexical", "..."],
+      // "language_servers": ["expert", "!elixir-ls", "!next-ls", "!lexical", "..."],
     },
     "Python": {
       "code_actions_on_format": {
@@ -319,6 +330,37 @@
           // "diagnostics": false,
           // "linters": ["standard"],
           // "formatter": "none"
+        },
+      },
+    },
+    "harper-ls": {
+      "settings": {
+        "harper-ls": {
+          "completionEnabled": true,
+          "userDictPath": "~/dict.txt",
+          "fileDictPath": "~/.harper/",
+          "diagnosticSeverity": "information",
+          "codeActions": {
+            "forceStable": false, // Force code actions to appear in "stable" positions
+          },
+          "linters": {
+            "spell_check": true,
+            "spelled_numbers": true,
+            "an_a": true,
+            "sentence_capitalization": true,
+            "unclosed_quotes": true,
+            "wrong_quotes": true,
+            "long_sentences": true,
+            "repeated_words": true,
+            "spaces": true,
+            "matcher": true,
+            "correct_number_suffix": true,
+            "number_suffix_capitalization": true,
+            "multiple_sequential_pronouns": true,
+            "linking_verbs": true,
+            "avoid_curses": true,
+            "terminating_conjunctions": true,
+          },
         },
       },
     },
