--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -1,11 +1,79 @@
 # The 'files' section is a mapping between the path of the file relative to
 # the repository root and its location in the filesystem (where the program
-# expects it)
-# In this case, say your repository is at `~/.dotfiles`, it will map
-# `~/.dotfiles/zsh/zprofile` to `~/.zprofile`,
-# and `~/.dotfiles/zshrc` to `~/.zshrc`
-# To clarify, folders in the repository don't have to correspond to packages.
-# On Windows, '~' is expanded to 'C:\Users\<USERNAME>\'
+# expects it).
+
+[aerc.files]
+"aerc/aerc.conf" = { target = "~/Library/Preferences/aerc/aerc.conf", type = "symbolic" }
+"aerc/binds.conf" = { target = "~/Library/Preferences/aerc/binds.conf", type = "symbolic" }
+"aerc/accounts.conf" = { target = "~/Library/Preferences/aerc/accounts.conf", type = "symbolic" }
+"aerc/folder_map" = { target = "~/Library/Preferences/aerc/folder_map", type = "symbolic" }
+
+[bat.files]
+"bat/config" = "~/.config/bat/config"
+"bat/themes" = "~/.config/bat/themes"
+
+[bin.files]
+"bin" = "~/.local/bin"
+
+[fastfetch.files]
+"fastfetch/config.jsonc" = "~/.config/fastfetch/config.jsonc"
+"fastfetch/uh_for_under.png" = { target = "~/.config/fastfetch/uh_for_under.png", type = "symbolic" }
+"fastfetch/montel-logo-clean.png" = { target = "~/.config/fastfetch/montel-logo-clean.png", type = "symbolic" }
+
+[git.files]
+"git/ignore" = "~/.config/git/ignore"
+"git/gitconfig" = "~/.config/git/config"
+
+[harlequin.files]
+"harlequin/harlequin.toml" = "~/Library/Application Support/harlequin/config.toml"
+
+[jj.files]
+"jj/config.toml" = "~/.config/jj/config.toml"
+"jjui/config.toml" = "~/Library/Application Support/jjui/config.toml"
+
+[ledger.files]
+"ledger/ledgerrc" = "~/.config/ledger/ledgerrc"
+
+[nushell.files]
+"nushell/config.nu" = "/Users/jongretar/Library/Application Support/nushell/config.nu"
+"nushell/env.nu" = "/Users/jongretar/Library/Application Support/nushell/env.nu"
+"nushell/lib" = "/Users/jongretar/Library/Application Support/nushell/lib"
+"nushell/vendor" = "/Users/jongretar/Library/Application Support/nushell/vendor"
+"nushell/autoload" = "/Users/jongretar/Library/Application Support/nushell/autoload"
+
+[mise.files]
+"mise/config.toml" = "~/.config/mise/config.toml"
+
+[ov.files]
+"ov/config.yaml" = "~/.config/ov/config.yaml"
+
+[radian.files]
+"radian/profile" = "~/.config/radian/profile"
+
+[sioyek.files]
+"sioyek/keys_user.config" = "~/Library/Application Support/sioyek/keys_user.config"
+"sioyek/prefs_user.config" = "~/Library/Application Support/sioyek/prefs_user.config"
+
+[starship.files]
+"starship/starship.toml" = "~/.config/starship.toml"
+
+[television.files]
+"television/config.toml" = "~/.config/television/config.toml"
+"television/cable" = { target = "~/.config/television/cable/", type = "symbolic" }
+
+[yazi.files]
+"yazi/init.lua" = "~/.config/yazi/init.lua"
+"yazi/yazi.toml" = "~/.config/yazi/yazi.toml"
+"yazi/keymap.toml" = "~/.config/yazi/keymap.toml"
+"yazi/package.toml" = "~/.config/yazi/package.toml"
+"yazi/theme.toml" = "~/.config/yazi/theme.toml"
+
+[zed.files]
+"zed/settings.json" = "~/.config/zed/settings.json"
+"zed/keymap.json" = "~/.config/zed/keymap.json"
+"zed/tasks.json" = "~/.config/zed/tasks.json"
+"zed/snippets" = "~/.config/zed/snippets/"
+
 [zsh.files]
 "zsh/zshenv" = "~/.zshenv"
 "zsh/zshrc" = "~/.zshrc"
@@ -17,75 +85,3 @@
 # and is used by the Handlebars templating engine as the rendering context.
 [zsh.variables]
 prompt_color = "#00FF00"
-
-[radian.files]
-"radian/profile" = "~/.config/radian/profile"
-
-[zed.files]
-"zed/settings.json" = "~/.config/zed/settings.json"
-"zed/keymap.json" = "~/.config/zed/keymap.json"
-"zed/tasks.json" = "~/.config/zed/tasks.json"
-"zed/snippets" = "~/.config/zed/snippets/"
-
-[starship.files]
-"starship/starship.toml" = "~/.config/starship.toml"
-
-[bat.files]
-"bat/config" = "~/.config/bat/config"
-"bat/themes" = "~/.config/bat/themes"
-
-[bin.files]
-"bin" = "~/.local/bin"
-
-[ledger.files]
-"ledger/ledgerrc" = "~/.config/ledger/ledgerrc"
-
-[yazi.files]
-"yazi/init.lua" = "~/.config/yazi/init.lua"
-"yazi/yazi.toml" = "~/.config/yazi/yazi.toml"
-"yazi/keymap.toml" = "~/.config/yazi/keymap.toml"
-"yazi/package.toml" = "~/.config/yazi/package.toml"
-"yazi/theme.toml" = "~/.config/yazi/theme.toml"
-
-[git.files]
-"git/ignore" = "~/.config/git/ignore"
-"git/gitconfig" = "~/.config/git/config"
-
-[jj.files]
-"jj/config.toml" = "~/.config/jj/config.toml"
-"jjui/config.toml" = "~/Library/Application Support/jjui/config.toml"
-
-[harlequin.files]
-"harlequin/harlequin.toml" = "~/Library/Application Support/harlequin/config.toml"
-
-[sioyek.files]
-"sioyek/keys_user.config" = "~/Library/Application Support/sioyek/keys_user.config"
-"sioyek/prefs_user.config" = "~/Library/Application Support/sioyek/prefs_user.config"
-
-[aerc.files]
-"aerc/aerc.conf" = { target = "~/Library/Preferences/aerc/aerc.conf", type = "symbolic" }
-"aerc/binds.conf" = { target = "~/Library/Preferences/aerc/binds.conf", type = "symbolic" }
-"aerc/accounts.conf" = { target = "~/Library/Preferences/aerc/accounts.conf", type = "symbolic" }
-"aerc/folder_map" = { target = "~/Library/Preferences/aerc/folder_map", type = "symbolic" }
-
-[fastfetch.files]
-"fastfetch/config.jsonc" = "~/.config/fastfetch/config.jsonc"
-"fastfetch/uh_for_under.png" = { target = "~/.config/fastfetch/uh_for_under.png", type = "symbolic" }
-"fastfetch/montel-logo-clean.png" = { target = "~/.config/fastfetch/montel-logo-clean.png", type = "symbolic" }
-
-[ov.files]
-"ov/config.yaml" = "~/.config/ov/config.yaml"
-
-[mise.files]
-"mise/config.toml" = "~/.config/mise/config.toml"
-
-[television.files]
-"television/config.toml" = "~/.config/television/config.toml"
-"television/cable" = { target = "~/.config/television/cable/", type = "symbolic" }
-
-[nushell.files]
-"nushell/config.nu" = "/Users/jongretar/Library/Application Support/nushell/config.nu"
-"nushell/env.nu" = "/Users/jongretar/Library/Application Support/nushell/env.nu"
-"nushell/lib" = "/Users/jongretar/Library/Application Support/nushell/lib"
-"nushell/vendor" = "/Users/jongretar/Library/Application Support/nushell/vendor"
-"nushell/autoload" = "/Users/jongretar/Library/Application Support/nushell/autoload"
