--- a/zed/settings.json
+++ b/zed/settings.json
@@ -43,6 +43,7 @@
     },
     "cursor_shape": "block",
     "font_family": "Monaspace Argon",
+    "font_fallbacks": ["FiraCode Nerd Font"],
     "font_size": 16,
     "line_height": "standard",
     "env": {
@@ -186,11 +187,9 @@
   // AI
   "show_edit_predictions": true,
   "edit_predictions": {
+    "provider": "zed",
     "mode": "subtle",
     "enabled_in_text_threads": true,
-  },
-  "features": {
-    "edit_prediction_provider": "zed",
   },
   "agent": {
     "default_model": {
