--- a/zed/settings.json
+++ b/zed/settings.json
@@ -192,12 +192,14 @@
     "enabled_in_text_threads": true,
   },
   "agent": {
+    "tool_permissions": {
+      "default": "allow"
+    },
     "default_model": {
       "provider": "zed.dev",
       "model": "claude-sonnet-4-5",
     },
     "button": true,
-    "always_allow_tool_actions": true,
     "default_profile": "write",
     "play_sound_when_agent_done": true,
   },
