sioyek: add J/K page navigation and yellow visual mark color

--- a/sioyek/keys_user.config
+++ b/sioyek/keys_user.config
@@ -2,6 +2,9 @@ new_window w
 open_document_embedded_from_current_path o
 open_last_document <C-o>
 
+next_page J
+previous_page K
+
 enter_visual_mark_mode r
 
 goto_mark '
