--- a/sioyek/prefs_user.config
+++ b/sioyek/prefs_user.config
@@ -3,6 +3,8 @@ ruler_mode  0
 
 search_url_l	https://libgen.li/index.php?req=
 
+visual_mark_color  1.0  1.0  0.0  0.3
+
 page_separator_width 5
 
 single_main_window_size    1024 874
